--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CoffeeBakeryADMIN</string>
+    <string name="app_name">FlechazoADMIN</string>
     <string name="title_activity_detail_product">DetailProductActivity</string>
     <!--
     This string is used for square devices and overridden by hello_world in
