--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <string name="channel_name">Thông báo sản phẩm mới!</string>
+    <string name="channel_description">Hiện tại đã có một sản phẩm mới đã được thêm vào!</string>
 </resources>
